# strands_apps

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: launch.action
door_pass/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
door_pass/action/: DoorCheck.action  DoorWait.action
door_pass/launch/: door_passing.launch  doorpassing_mux.launch
door_pass/msg/: DoorCheckStat.msg  DoorWaitStat.msg
door_pass/scripts/: door_checking.py  door_passing.py  door_prediction.py  door_wait_and_move_base.py  door_wait_and_pass.py  door_waiting.py
door_pass/src/: CDoorDetection.cpp  CDoorDetection.h  door_detect.cpp
door_pass/src/door_pass/: CDoorDetection.cpp  __init__.py  door_detect.cpp  door_pass.cpp  door_utils.py
launch/: doorpassing_mux.launch  rampclimbing_mux.launch
marathon_reporter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
marathon_reporter/msg/: MarathonSession.msg
marathon_reporter/scripts/: mileage_monitor.py
odometry_mileage/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
odometry_mileage/src/: odometry_mileage.cpp
pose_extractor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
pose_extractor/scripts/: extract_last_pose_from_path.py
ramp_climb/: CHANGELOG.rst  CMakeLists.txt  package.xml
ramp_climb/launch/: rampclimbing_mux.launch
ramp_climb/src/: ramp_climb.cpp
reconfigure_inflation/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
reconfigure_inflation/scripts/: reconfigure_inflation_server.py
roslaunch_axserver/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
roslaunch_axserver/action/: launch.action
roslaunch_axserver/scripts/: roslaunch_server.py
roslaunch_axserver/tests/: launch.test  test-launch.xml  test_launcher_node.py
scitos_door_pass/: CMakeLists.txt  README.md
scitos_door_pass/scripts/: door_pass.py
scitos_door_pass/src/: door_detect.cpp  door_pass_simple.cpp
scitos_ramp_climb/: CMakeLists.txt  package.xml  test.sh
scripts/: door_pass.py  reconfigure_inflation_server.py  roslaunch_server.py  sendemailscript.py  state_checker.py
src/: door_detect.cpp  door_pass.cpp  door_pass2.cpp  ramp_climb.cpp
src/scripts/: republish_ptu_jointstate.py
state_checker/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
state_checker/scripts/: sendemailscript.py  state_checker.py
static_transform_manager/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
static_transform_manager/scripts/: rviz_click_to_tf.py  static_tf_services.py
static_transform_manager/srv/: SetTransformation.srv  StopTransformation.srv
strands_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml
strands_emails/: CHANGELOG.rst  CMakeLists.txt  package.xml
strands_emails/action/: SendEmail.action
strands_emails/script/: send_emails.py
strands_emails/scripts/: send_emails.py  test_email.py
topic_republisher/: CHANGELOG.rst  CMakeLists.txt  package.xml
topic_republisher/scripts/: republish_odometry.py  republish_ptu_jointstate.py  republish_ptu_state.py  republish_robot_pose.py
topological_roslaunch/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
topological_roslaunch/config/: example.yaml
topological_roslaunch/scripts/: bring_up_at_nodes.py  tear_down_at_nodes.py
topological_roslaunch/src/topological_roslaunch/: __init__.py  triggers.py
watchdog/: CMakeLists.txt  README.md  package.xml  setup.py
watchdog/config/: example.yaml
watchdog/scripts/: list_available  watchdog
watchdog/src/watchdog/: __init__.py
watchdog/src/watchdog/actions/: base_action.py
watchdog/src/watchdog/monitors/: base_monitor.py
watchdog_node/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
watchdog_node/config/: example2.yaml  example3.yaml
watchdog_node/scripts/: list_available  watchdog_node
watchdog_node/src/watchdog_node/: __init__.py  watchdog.py
watchdog_node/src/watchdog_node/actions/: __init__.py  base_action.py  logging.py  nodes.py
watchdog_node/src/watchdog_node/monitors/: __init__.py  base_monitor.py  topics.py
